Initial CFG localization

--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-3.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-3.cfg
@@ -28,9 +28,9 @@ PART {
 	cost = 250
 	category = Structural
 	subcategory = 0
-	title = SM-3 Stack Triple Adapter
+	title = #LOC_NFConstruction_adapter-125-0625-3_title
 	manufacturer = O.M.B. Demolition Enterprises
-	description =  Converts a 1.25m stack into three 0.625m mounts. Tiny, tiny mounts.
+	description =  #LOC_NFConstruction_adapter-125-0625-3_description
 
 	allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
