--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
@@ -2,14 +2,14 @@
 // Adapter - 2.5m to 2-8 0.625m
 PART {
 
-	name = adapter-25-multi-01
+	name = adapter-25-multi-1
 	module = Part
 	author = Chris Adderley
 
 	//mesh = adapter-largeto5.mu
 	MODEL
 	{
-		model = NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-01
+		model = NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1
 		position = 0.0, 0.0, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
@@ -43,9 +43,9 @@ PART {
 	cost = 450
 	category = Structural
 	subcategory = 0
-	title = SE-4-OMNI Stack Multi-Adapter
+	title = #LOC_NFConstruction_adapter-25-multi-1_title
 	manufacturer = O.M.B. Demolition Enterprises
-	description = This breakthrough in modularity allows for a 2.5m stack to be split to between 2 and 8 0.625m stacks. With a cookie on top.
+	description = #LOC_NFConstruction_adapter-25-multi-1_description
 
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
@@ -66,18 +66,18 @@ PART {
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Nodes
+		switcherDescription = #LOC_NFConstruction_switcher_multiadapter_title
 
 		SUBTYPE
 		{
-			name = Two
+			name = #LOC_NFConstruction_switcher_multiadapter_variant1
 			transform = 2WayX
 			node = bottom01
 			node = bottom05
 		}
 		SUBTYPE
 		{
-			name = Four
+			name = #LOC_NFConstruction_switcher_multiadapter_variant2
 			transform = 2WayX
 			transform = 2WayY
 			node = bottom01
@@ -87,7 +87,7 @@ PART {
 		}
 		SUBTYPE
 		{
-			name = Six
+			name = #LOC_NFConstruction_switcher_multiadapter_variant3
 			transform = 2WayX
 			transform = 6Way
 			node = bottom01
@@ -99,7 +99,7 @@ PART {
 		}
 		SUBTYPE
 		{
-			name = Eight
+			name = #LOC_NFConstruction_switcher_multiadapter_variant4
 			transform = 2WayX
 			transform = 2WayY
 			transform = 4Way
