--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
@@ -29,9 +29,9 @@ PART
 
 	category = Structural
 	subcategory = 0
-	title = S-MED Radial Stack Adapter
+	title = #LOC_NFConstruction_adapter-rad-125_title
 	manufacturer = O.M.B. Demolition Enterprises
-	description =  A radial stack adapter for 1.25m stacks. Studies show that this could increase the ease of building rockets by up to 16.2%.
+	description =  #LOC_NFConstruction_adapter-rad-125_description
 	attachRules = 1,1,1,1,1
 
 	mass = 0.045
