--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-01.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 3600
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Annular Truss XL
-	manufacturer = Giga Bloks Construction Toys
-	description = A gigantic truss suitable for all sorts of orbital construction. Contains multiple structural variants for infinite fun.
+	title = #LOC_NFConstruction_truss-circular-01_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-circular-01_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
@@ -52,14 +52,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core Truss
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_core_variant2
 			transform = CENTERLRG
 			transform = COLLIDER_CTRLRG
 			addedMass = 0.5
@@ -70,10 +70,10 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch2
-		switcherDescription = Outer Truss
+		switcherDescription =#LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSLRG
 			transform = COLLIDER_OUTERLRGB01
 			transform = COLLIDER_OUTERLRGB02
@@ -88,7 +88,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSLRGSADDLE
 			transform = COLLIDER_OUTERLRGB01
 			transform = COLLIDER_OUTERLRGB02
@@ -100,7 +100,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_truss_variant2
 			transform = TRUSSLRGHOLLOW
 			addedMass = -0.7
 			addedCost = -2160
@@ -110,14 +110,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
-		switcherDescription = Top Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TOPLRG
 			transform = COLLIDER_TOPLRG
@@ -129,14 +129,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
-		switcherDescription = Bottom Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = BOTTOMLRG
 			transform = COLLIDER_BOTTOMLRG
