--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 1800
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Annular Truss
-	manufacturer = Giga Bloks Construction Toys
-	description = A medium size but still impressive truss suitable for all sorts of orbital construction. Contains multiple structural variants for infinite fun.
+	title = #LOC_NFConstruction_truss-circular-02_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-circular-02_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
@@ -52,14 +52,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core Truss
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_core_variant2
 			transform = CENTER
 			transform = COLLIDER_CTR
 			addedMass = 0.25
@@ -70,10 +70,10 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch2
-		switcherDescription = Outer Truss
+		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSS
 			transform = COLLIDER_OUTERB001
 			transform = COLLIDER_OUTERB002
@@ -88,7 +88,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name =#LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSSADDLE
 			transform = COLLIDER_OUTERB001
 			transform = COLLIDER_OUTERB002
@@ -100,7 +100,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_truss_variant2
 			transform = TRUSSHOLLOW
 			addedMass = -0.4
 			addedCost = -1080
@@ -110,14 +110,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
-		switcherDescription = Top Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TOP
 			transform = COLLIDER_TOP
@@ -129,14 +129,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
-		switcherDescription = Bottom Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = BOTTOM
 			transform = COLLIDER_BOTTOM
