--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 800
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Annular Truss Micro
-	manufacturer = Giga Bloks Construction Toys
-	description = A mini annular truss segment! It's so tiny we almost forgot that it's STILL HUGE. Contains multiple structural variants for infinite fun.
+	title = #LOC_NFConstruction_truss-circular-04_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-circular-04_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
@@ -52,14 +52,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core Truss
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name =#LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name =#LOC_NFConstruction_switcher_core_variant2
 			transform = CENTERMINI
 			transform = COLLIDER_CTRMINI
 			addedMass = 0.0625
@@ -70,10 +70,10 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch2
-		switcherDescription = Outer Truss
+		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSMINI
 			transform = COLLIDER_OUTERMINIB01
 			transform = COLLIDER_OUTERMINIB02
@@ -88,7 +88,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSMINISADDLE
 			transform = COLLIDER_OUTERMINIB01
 			transform = COLLIDER_OUTERMINIB02
@@ -100,7 +100,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_truss_variant2
 			transform = TRUSSMINIHOLLOW
 			addedMass = -0.1
 			addedCost = -270
@@ -110,14 +110,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
-		switcherDescription = Top Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TOPMINI
 			transform = COLLIDER_TOPMINI
@@ -129,14 +129,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
-		switcherDescription = Bottom Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = BOTTOMMINI
 			transform = COLLIDER_BOTTOMMINI
