--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 800
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Octo-Girder XL
-	manufacturer = Giga Bloks Construction Toys
-	description = A large octagonal truss piece. Several variants are available with different structural and fuel configurations.
+	title = #LOC_NFConstruction_truss-octo-1_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-1_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
@@ -61,18 +61,18 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 		baseVolume = 6000
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoLarge
 			transform = COLLISION15
 		}
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoLargeHollow
 			transform = OctoLargeHollowStruct
 			transform = COLLISION09
@@ -90,7 +90,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name = #LOC_NFConstruction_switcher_subtype_variant3
 			transform = OctoLargeHollowSaddle
 			transform = OctoLargeHollowStructSaddle
 			transform = COLLISION09
@@ -106,7 +106,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Open
+			name = #LOC_NFConstruction_switcher_subtype_variant4
 			transform = OctoLargeHollowHalf
 			transform = OctoLargeHollowStructHalf
 			transform = COLLISION09
@@ -121,7 +121,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = LFO
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
 			tankType = LFOX
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -131,7 +131,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = LiquidFuel
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
 			tankType = LF
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -142,7 +142,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Oxidizer
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_O
 			tankType = OX
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -152,7 +152,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Mission Support
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
 			tankType = MPEC
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -163,7 +163,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Xenon
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
 			tankType = Xenon
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -173,7 +173,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Ore
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
 			tankType = Ore
 			transform = OctoLargeBare
 			transform = COLLISION15
