--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
@@ -28,9 +28,9 @@ PART
 	cost = 100
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Octo-Girder Nano
-	manufacturer = Giga Bloks Construction Toys
-	description = A teensy octagonal truss piece.
+	title = #LOC_NFConstruction_truss-octo-4_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-4_description
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -51,18 +51,18 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoEighth
 			transform = COLLISIONNANO
 		}
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoEighthHollow
 			transform = OctoEighthHollowCore
 			transform = COLLISION01
