--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 550
 	category = Structural
 	subcategory = 0
-	title = Modular Octo-Girder Adapter
-	manufacturer = Giga Bloks Construction Toys
-	description = Connect an octo-truss to a 2.5m part, you say? No problem!
+	title = #LOC_NFConstruction_truss-octo-adapter-1_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-adapter-1_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
