--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -28,9 +28,9 @@ PART
 	cost = 1200
 	category = Structural
 	subcategory = 0
-	title = Pressurized Modular Octo-Girder Angular Connector
-	manufacturer = Giga Bloks Construction Toys
-	description = A specialized angled octo-girder, available in angular increments of 90, 45 and 30 degrees. This model is pressurized and allows crew passage.
+	title = #LOC_NFConstruction_truss-octo-angled-crew-1_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-angled-crew-1_description
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -50,11 +50,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Angle
+		switcherDescription = A#LOC_NFConstruction_switcher_angle_title
 
 		SUBTYPE
 		{
-			name = 90 Degree
+			name = #LOC_NFConstruction_switcher_angle_variant1
 			node = top01
 			transform = Truss90A
 			transform = Truss90B
@@ -63,7 +63,7 @@ PART
 
 		SUBTYPE
 		{
-			name = 45 Degree
+			name = #LOC_NFConstruction_switcher_angle_variant2
 			node = top02
 			transform = Truss45A
 			transform = Truss45B
@@ -75,7 +75,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = 30 Degree
+			name = #LOC_NFConstruction_switcher_angle_variant3
 			node = top03
 			transform = Truss30A
 			transform = Truss30B
