--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 875
 	category = Structural
 	subcategory = 0
-	title = Modular Octo-Girder Radial Attach Node
-	manufacturer = Giga Bloks Construction Toys
-	description = A radial attachment node that allows the Modular Octo-Girder to, quite literally, do anything. Two variants that work at 90 or 45 degrees to a standard truss.
+	title = #LOC_NFConstruction_truss-octo-attach-1_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-attach-1_description
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -47,11 +47,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_attach_title
 
 		SUBTYPE
 		{
-			name = Angled
+			name = #LOC_NFConstruction_switcher_attach_variant1
 			transform = OctoAttach
 			transform = COLLISION
 
@@ -59,7 +59,7 @@ PART
 
 		SUBTYPE
 		{
-			name = Angled Hollow
+			name = #LOC_NFConstruction_switcher_attach_variant2
 			transform = OctoAttachHollow
 			transform = COLLISION
 			addedCost = -75
@@ -67,14 +67,14 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Ortho
+			name = #LOC_NFConstruction_switcher_attach_variant3
 			transform = OctoAttachAlt
 			transform = COLLISIONALT
 		}
 
 		SUBTYPE
 		{
-			name = Ortho Hollow
+			name = #LOC_NFConstruction_switcher_attach_variant4
 			transform = OctoAttachAltHollow
 			transform = COLLISIONALT
 			addedCost = -75
