--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 1550
 	category = Structural
 	subcategory = 0
-	title = Modular Pressurized Octo-Girder XL
-	manufacturer = Giga Bloks Construction Toys
-	description = A large octagonal truss piece with an integrated pressurized section.
+	title = #LOC_NFConstruction_truss-octo-crew-1_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-crew-1_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
@@ -58,11 +58,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = TubeLrg
 			transform = OctoLarge001
 			transform = COLLISION15
@@ -70,7 +70,7 @@ PART
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = TubeLrg
 			transform = OctoLargeHollowCrew
 			transform = OctoLargeHollowStructCrew
@@ -87,7 +87,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Open
+			name = #LOC_NFConstruction_switcher_subtype_variant4
 			transform = TubeLrg
 			transform = OctoLargeHollowHalfCrew
 			transform = OctoLargeHollowStructHalfCrew
