--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
@@ -26,9 +26,9 @@ PART
 	cost = 950
 	category = Structural
 	subcategory = 0
-	title = Modular Pressurized Octo-Girder Micro
-	manufacturer = Giga Bloks Construction Toys
-	description = A small octagonal truss piece with an integrated pressurized section.
+	title = #LOC_NFConstruction_truss-octo-crew-3_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-crew-3_description
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -57,11 +57,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = TubeSmall
 			transform = OctoSmall001
 			transform = COLLISION031
@@ -69,7 +69,7 @@ PART
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = TubeSmall
 			transform = OctoSmallHollowCrew
 			transform = OctoSmallHollowStructCrew
@@ -86,7 +86,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Open
+			name = #LOC_NFConstruction_switcher_subtype_variant4
 			transform = TubeSmall
 			transform = OctoSmallHollowHalfCrew
 			transform = OctoSmallHollowStructHalfCrew
