--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
@@ -23,9 +23,9 @@ PART
 	cost = 4500
 	category = Pods
 	subcategory = 0
-	title = Modular Octo-Girder Guidance Unit
-	manufacturer = Giga Bloks Construction Toys
-	description = Remotely operated guidance unit with the most advanced algorithms. Also incorporates a large, powerful set of reaction wheels suitable for moving large spacecraft.
+	title = #LOC_NFConstruction_truss-octo-drone-1_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-drone-1_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss
