--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 1000
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss
-	manufacturer = Giga Bloks Construction Toys
-	description = A large square truss of considerable size with an internal core. Available in several variants.
+	title = #LOC_NFConstruction_truss-spinal-01_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-spinal-01_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf
@@ -52,14 +52,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_core_variant2
 			transform = CORELRG
 			transform = COLLIDERLRGCORE
 			addedMass = 0.2
@@ -70,10 +70,10 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch2
-		switcherDescription = Truss
+		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSLRG
 			transform = COLLIDERLRG01
 			transform = COLLIDERLRG02
@@ -83,7 +83,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSLRGSADDLE
 			transform = COLLIDERLRG01
 			transform = COLLIDERLRG02
@@ -94,7 +94,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Dual
+			name = #LOC_NFConstruction_switcher_truss_variant4
 			transform = TRUSSLRGDUAL
 			transform = COLLIDERLRG01
 			transform = COLLIDERLRG02
@@ -103,7 +103,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Frame
+			name = #LOC_NFConstruction_switcher_truss_variant5
 			transform = TRUSSLRGFRAME
 			addedMass = -0.35
 			addedCost = -450
@@ -113,11 +113,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
-		switcherDescription = Top Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 
 		SUBTYPE
 		{
-			name = Basic
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSTOP
 			transform = COLLIDERTOPA01
@@ -127,7 +127,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TRUSSTOPSOLID
 			transform = COLLIDERTOPB
@@ -136,7 +136,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSTOPFRAME
 			addedMass = -0.01
 			addedCost = -25
@@ -146,11 +146,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
-		switcherDescription = Bottom Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 
 		SUBTYPE
 		{
-			name = Basic
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSBOT
 			transform = COLLIDERBOTA01
@@ -160,7 +160,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = TRUSSBOTSOLID
 			transform = COLLIDERBOTB
@@ -169,7 +169,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSBOTFRAME
 			addedMass = -0.01
 			addedCost = -25
