--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-01.cfg
@@ -26,9 +26,9 @@ PART
 	cost = 1900
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss Series-3 Adapter
-	manufacturer = Giga Bloks Construction Toys
-	description = Adapts the Spinal Truss profile to a standard 3.75m mount. Some variants are available.
+	title = #LOC_NFConstruction_truss-spinal-adapter-01_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-spinal-adapter-01_description
 	attachRules = 1,0,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf, size3
@@ -51,14 +51,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_core_variant2
 			transform = COREADAPT01
 			transform = COLLIDERADAPT01CORE
 			addedMass = 0.05
