--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
@@ -23,9 +23,9 @@ PART
 	cost = 1700
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss Series-2 Adapter
-	manufacturer = Giga Bloks Construction Toys
-	description = Adapts the Spinal Truss profile to a standard 2.5m mount. Some variants are available.
+	title = #LOC_NFConstruction_truss-spinal-adapter-02_title
+	manufacturer =#LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-spinal-adapter-02_description
 	attachRules = 1,0,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf, size2
@@ -47,14 +47,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_core_variant2
 			transform = COREADAPT02
 			transform = COLLIDERADAPT02CORE
 			addedMass = 0.05
