--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-2.cfg
@@ -28,9 +28,9 @@ PART {
 	cost = 200
 	category = Structural
 	subcategory = 0
-	title = SM-2 Stack Dual Adapter
+	title =#LOC_NFConstruction_adapter-125-0625-2_title
 	manufacturer = O.M.B. Demolition Enterprises
-	description =  Converts a 1.25m stack into two 0.625m mounts, suitable for mounting all manner of small engines.
+	description =  #LOC_NFConstruction_adapter-125-0625-2_description
 
 	allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
