--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 350
 	category = Structural
 	subcategory = 0
-	title = Rockomax Skeletal Structural Adapter
+	title = #LOC_NFConstruction_adapter-25-125_title
 	manufacturer = Rockomax Conglomerate
-	description = A barebones adapter from Rockomax that upholds the company's reputation for quality bargain-bin parts.
+	description = #LOC_NFConstruction_adapter-25-125_description
 
 	attachRules = 1,0,1,1,0
 	thermalMassModifier = 0.4 // I am hollow
