--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
@@ -30,9 +30,9 @@ PART
 	cost = 675
 	category = Structural
 	subcategory = 0
-	title = S-MINI Radial Stack Adapter
+	title = #LOC_NFConstruction_adapter-rad-0625_title
 	manufacturer = O.M.B. Demolition Enterprises
-	description = A pretty tiny radial stack adapter for 0.625m stacks. Now we don't need to use large tanks full of explosive fuels to do this. It's a win-win situation!.
+	description = #LOC_NFConstruction_adapter-rad-0625_description
 	attachRules = 1,1,1,1,1
 
 	mass = 0.008
