--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 900
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Annular Truss Mini
-	manufacturer = Giga Bloks Construction Toys
-	description = A smallish but massive circular truss. Contains multiple structural variants for infinite fun.
+	title = #LOC_NFConstruction_truss-circular-03_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-circular-03_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
@@ -52,14 +52,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core Truss
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name =#LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_core_variant2
 			transform = CENTERSML
 			transform = COLLIDER_CTRSML
 			addedMass = 0.125
@@ -70,10 +70,10 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch2
-		switcherDescription = Outer Truss
+		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSSML
 			transform = COLLIDER_OUTERSMLB01
 			transform = COLLIDER_OUTERSMLB02
@@ -89,7 +89,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name =#LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSSMLSADDLE
 			transform = COLLIDER_OUTERSMLB01
 			transform = COLLIDER_OUTERSMLB02
@@ -101,7 +101,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_truss_variant2
 			transform = TRUSSSMLHOLLOW
 			addedMass = -0.2
 			addedCost = -540
@@ -111,14 +111,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
-		switcherDescription = Top Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name =#LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TOPSML
 			transform = COLLIDER_TOPSML
@@ -130,14 +130,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
-		switcherDescription = Bottom Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = BOTTOMSML
 			transform = COLLIDER_BOTTOMSML
