--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 1400
 	category = Structural
 	subcategory = 0
-	title = Modular Annular Truss Adapter
-	manufacturer = Giga Bloks Construction Toys
-	description = Adapts a gigantic 5 meter truss mount to a 3.75m stack. Hollow, with an alternate version with a central truss
+	title = #LOC_NFConstruction_truss-circular-adapter-01_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-circular-adapter-01_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, size3
@@ -50,15 +50,15 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core Truss
+		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_core_variant1
 			transform = AdapterCoreBit
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name =#LOC_NFConstruction_switcher_core_variant2
 			transform = ADAPTERCore
 			transform = COLLIDER_ADAPTCORE
 			addedMass = 0.1
