--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 200
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Hexa-Girder S1
-	manufacturer = Giga Bloks Construction Toys
-	description = A wee truss piece that fits around 1.25m pieces. Multiple variants are available.
+	title = #LOC_NFConstruction_truss-hex-03_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-hex-03_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = hextruss, srf
@@ -52,18 +52,18 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = SmallTruss
 			transform = COLLIDERSML
 		}
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = SmallTrussHollow
 			transform = COLLIDEREND
 			transform = COLLIDEREND001
