--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 400
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Octo-Girder
-	manufacturer = Giga Bloks Construction Toys
-	description = A medium octagonal truss piece. Several variants are available with different structural and fuel configurations.
+	title = #LOC_NFConstruction_truss-octo-2_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-2_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
@@ -61,18 +61,18 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 		baseVolume = 3000
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoMedium
 			transform = COLLISION14
 		}
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoMedHollow
 			transform = OctoMedHollowStruct
 			transform = COLLISION05
@@ -89,7 +89,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name = #LOC_NFConstruction_switcher_subtype_variant3
 			transform = OctoMedHollowSaddle
 			transform = OctoMedHollowStructSaddle
 			transform = COLLISION05
@@ -105,7 +105,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Open
+			name = #LOC_NFConstruction_switcher_subtype_variant4
 			transform = OctoMedHollowHalf
 			transform = OctoMedHollowStructHalf
 			transform = COLLISION05
@@ -120,7 +120,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = LFO
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
 			tankType = LFOX
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -130,7 +130,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = LiquidFuel
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
 			tankType = LF
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -140,7 +140,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Oxidizer
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_O
 			tankType = OX
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -150,7 +150,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Mission Support
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
 			tankType = MPEC
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -161,7 +161,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Xenon
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
 			tankType = Xenon
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -171,7 +171,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Ore
+			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
 			tankType = Ore
 			transform = OctoMedBare
 			transform = COLLISION14
