--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -28,9 +28,9 @@ PART
 	cost = 200
 	category = Structural
 	subcategory = 0
-	title = Modular Multipurpose Octo-Girder Micro
-	manufacturer = Giga Bloks Construction Toys
-	description = A small octagonal truss piece. Several variants are available with different structural configurations.
+	title = #LOC_NFConstruction_truss-octo-3_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-3_description
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -51,18 +51,18 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoSmall
 			transform = COLLISION13
 		}
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoSmallHollow
 			transform = OctoSmallHollowStruct
 			transform = COLLISION01
@@ -79,7 +79,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name = #LOC_NFConstruction_switcher_subtype_variant3
 			transform = OctoSmallHollowSaddle
 			transform = OctoSmallHollowStructSaddle
 			transform = COLLISION02
@@ -95,7 +95,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Open
+			name = #LOC_NFConstruction_switcher_subtype_variant4
 			transform = OctoSmallHollowHalf
 			transform = OctoSmallHollowStructHalf
 			transform = COLLISION02
