--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 1150
 	category = Structural
 	subcategory = 0
-	title = Modular Pressurized Octo-Girder
-	manufacturer = Giga Bloks Construction Toys
-	description = A medium octagonal truss piece with an integrated pressurized section.
+	title = #LOC_NFConstruction_truss-octo-crew-2_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-crew-2_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
@@ -58,11 +58,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
 
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = TubeMedium
 			transform = OctoMedium001
 			transform = COLLISION032
@@ -70,7 +70,7 @@ PART
 
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = TubeMedium
 			transform = OctoMedHollowCrew
 			transform = OctoMedHollowStructCrew
@@ -87,7 +87,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Open
+			name = #LOC_NFConstruction_switcher_subtype_variant4
 			transform = TubeMedium
 			transform = OctoMedHollowHalfCrew
 			transform = OctoMedHollowStructHalfCrew
