--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-01.cfg
@@ -31,9 +31,9 @@ PART
 	cost = 800
 	category = Structural
 	subcategory = 0
-	title = Modular Octo-Girder Octo-Hub
-	manufacturer = Giga Bloks Construction Toys
-	description = This large structural hub expands the range of attachment options for octo-girders by six!
+	title = #LOC_NFConstruction_truss-octo-hub-1_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-hub-1_description
 
 	attachRules = 1,0,1,1,0
 	thermalMassModifier = 0.4 // I am hollow
