--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 500
 	category = Structural
 	subcategory = 0
-	title = Modular Spinal Truss Mini
-	manufacturer = Giga Bloks Construction Toys
-	description = A medium square truss of considerable size with an internal core. Available in several variants.
+	title =#LOC_NFConstruction_truss-spinal-02_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-spinal-02_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = spinaltruss, srf
@@ -52,14 +52,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core
+		switcherDescription =#LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_core_variant2
 			transform = COREMED
 			transform = COLLIDERMEDCORE
 			addedMass = 0.1
@@ -70,10 +70,10 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch2
-		switcherDescription = Truss
+		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSMED
 			transform = COLLIDERMED01
 			transform = COLLIDERMED02
@@ -82,7 +82,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Saddle
+			name = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSMEDSADDLE
 			transform = COLLIDERMED04
 			transform = COLLIDERMED02
@@ -93,7 +93,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Dual
+			name =#LOC_NFConstruction_switcher_truss_variant4
 			transform = TRUSSMEDDUAL
 			transform = COLLIDERMED03
 			transform = COLLIDERMED04
@@ -102,7 +102,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Frame
+			name = #LOC_NFConstruction_switcher_truss_variant5
 			transform = TRUSSMEDFRAME
 			addedMass = -0.175
 			addedCost = -225
@@ -112,11 +112,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch3
-		switcherDescription = Top Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 
 		SUBTYPE
 		{
-			name = Basic
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSTOP
 			transform = COLLIDERTOPA01
@@ -126,7 +126,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TRUSSTOPSOLID
 			transform = COLLIDERTOPB
@@ -135,7 +135,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = None
+			name =#LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSTOPFRAME
 			addedMass = -0.01
 			addedCost = -25
@@ -145,11 +145,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch4
-		switcherDescription = Bottom Cap
+		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 
 		SUBTYPE
 		{
-			name = Basic
+			name = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSBOT
 			transform = COLLIDERBOTA01
@@ -159,7 +159,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = Solid
+			name = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = TRUSSBOTSOLID
 			transform = COLLIDERBOTB
@@ -168,7 +168,7 @@ PART
 		}
 		SUBTYPE
 		{
-			name = None
+			name = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSBOTFRAME
 			addedMass = -0.01
 			addedCost = -25
